# inspector

./: meson.build
include/inspector/: inspector.hpp
tests/: decode.cpp  meson.build  operators.cpp
